--- a/css/style.css
+++ b/css/style.css
@@ -139,10 +139,35 @@ body {
 .centervh {
     position: absolute;
     /* left: 50%; */
-    top: 50%;
+    top: 40%;
     /* transform: translate(-50%, -50%); */
     /* border: 5px solid #FFFF00; */
     padding: 10px;
+}
+
+
+.carousel .carousel-item {
+    height: 500px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
+
+.carousel .carousel-item.carousel-item250 {
+    height: 250px;
+}
+
+.carousel-item.carousel-item250 img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    min-height: 250px;
 }
 
 .carousel-text-line1 {
@@ -153,7 +178,7 @@ body {
 
 .carousel-text-line2 {
     color: #fff;
-    margin-top: 0px;
+    margin-top: -10px;
     padding: 0px 15px 1px 15px;
 }
 
